--- a/src/global.less
+++ b/src/global.less
@@ -45,3 +45,12 @@ ol {
     }
   }
 }
+
+.ant-menu-horizontal{
+  display: flex;
+  align-content: center;
+}
+
+.ant-menu-horizontal .ant-menu-submenu{
+  margin-top: 0;
+}
