--- a/src/pages/user/login/style.less
+++ b/src/pages/user/login/style.less
@@ -1,6 +1,7 @@
 @import '~antd/es/style/themes/default.less';
 
 .main {
+  // margin: 0 !important;
   width: 368px;
   margin: 0 auto;
   @media screen and (max-width: @screen-sm) {
