--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -10,6 +10,7 @@
   line-height: @layout-header-height;
   vertical-align: top;
   cursor: pointer;
+
   img {
     display: inline-block;
     vertical-align: middle;
@@ -20,6 +21,7 @@
   :global(.anticon) {
     margin-right: 8px;
   }
+
   :global(.ant-dropdown-menu-item) {
     min-width: 160px;
   }
@@ -27,10 +29,11 @@
 
 .trigger {
   height: @layout-header-height;
-  padding: ~'calc((@{layout-header-height} - 20px) / 2)' 24px;
+  padding:~'calc((@{layout-header-height} - 20px) / 2)'24px;
   font-size: 20px;
   cursor: pointer;
   transition: all 0.3s, padding 0s;
+
   &:hover {
     background: @pro-header-hover-bg;
   }
@@ -41,32 +44,39 @@
   height: 100%;
   margin-left: auto;
   overflow: hidden;
+
   .action {
     display: inline-block;
     height: 100%;
     padding: 0 12px;
     cursor: pointer;
     transition: all 0.3s;
-    > i {
+
+    >i {
       color: @text-color;
       vertical-align: middle;
     }
+
     &:hover {
       background: @pro-header-hover-bg;
     }
+
     &:global(.opened) {
       background: @pro-header-hover-bg;
     }
   }
+
   .search {
     padding: 0 12px;
+
     &:hover {
       background: transparent;
     }
   }
+
   .account {
     .avatar {
-      margin: ~'calc((@{layout-header-height} - 24px) / 2)' 0;
+      margin:~'calc((@{layout-header-height} - 24px) / 2)'0;
       margin-right: 8px;
       color: @primary-color;
       vertical-align: top;
@@ -77,11 +87,14 @@
 
 .dark {
   height: @layout-header-height;
+
   .action {
     color: rgba(255, 255, 255, 0.85);
-    > i {
+
+    >i {
       color: rgba(255, 255, 255, 0.85);
     }
+
     &:hover,
     &:global(.opened) {
       background: @primary-color;
@@ -90,15 +103,20 @@
 }
 
 :global(.ant-pro-global-header) {
+  display: flex;
+
   .dark {
     .action {
       color: @text-color;
-      > i {
+
+      >i {
         color: @text-color;
       }
+
       &:hover {
         color: rgba(255, 255, 255, 0.85);
-        > i {
+
+        >i {
           color: rgba(255, 255, 255, 0.85);
         }
       }
@@ -106,25 +124,46 @@
   }
 }
 
+:global(.ant-pro-global-header-trigger) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+:global(.antd-pro-components-global-header-index-right) {
+  flex: 1;
+  display: flex;
+  align-content: center;
+  div {
+    margin-left: 20px;
+  }
+}
+
 @media only screen and (max-width: @screen-md) {
   :global(.ant-divider-vertical) {
     vertical-align: unset;
   }
+
   .name {
     display: none;
   }
+
   i.trigger {
     padding: 22px 12px;
   }
+
   .logo {
     position: relative;
     padding-right: 12px;
     padding-left: 12px;
   }
+
   .right {
     position: absolute;
     top: 0;
     right: 12px;
+
     .account {
       .avatar {
         margin-right: 0;
