--- a/src/global.less
+++ b/src/global.less
@@ -46,14 +46,28 @@ ol {
   }
 }
 
-.ant-menu-horizontal{
+.ant-menu-horizontal {
   display: flex;
   align-content: center;
 }
 
-.ant-menu-horizontal .ant-menu-submenu{
+.ant-menu-horizontal .ant-menu-submenu {
   margin-top: 0;
 }
-.ant-pro-grid-content{
+.ant-pro-grid-content {
   padding: 50px;
+}
+.ant-layout-header {
+  position: initial !important;
+}
+.ant-pro-global-header-logo {
+  display: none;
+}
+
+html {
+  list-style: none;
+}
+* {
+  padding: 0;
+  margin: 0;
 }
